--- a/basic-audio/index_backup.html
+++ b/basic-audio/index_backup.html
@@ -1,29 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Basic Audio Explorer</title>
-  <!-- Include Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body { background-color: #1e1e1e; color: #f0e9df; font-family: sans-serif; }
+    .container { max-width: 600px; margin: 2rem auto; padding: 1rem; }
+    canvas { border: 2px solid #8eb86e; border-radius: 0.5rem; }
+    .slider { width: 100%; }
+    .button { background-color: #f29f51; color: #1e1e1e; border: none; padding: 0.5rem 1rem; margin-right: 0.5rem; cursor: pointer; }
+    .button:disabled { opacity: 0.5; cursor: not-allowed; }
+  </style>
 </head>
-<body class="bg-gray-900 text-white font-sans">
-  <div class="max-w-md mx-auto p-6">
-    <h1 class="text-2xl font-bold mb-4">Basic Audio Explorer</h1>
-    <div class="mb-4">
-      <p class="mb-2">Frequency: <span id="frequencyValue">440</span> Hz</p>
-      <input id="frequencySlider" type="range" min="100" max="1000" step="1" value="440" class="w-full accent-indigo-500" />
+<body>
+  <div class="container">
+    <h1>Basic Audio Explorer</h1>
+    <div>
+      <p>Frequency: <span id="frequencyValue">440</span> Hz</p>
+      <input id="frequencySlider" class="slider" type="range" min="100" max="1000" step="1" value="440">
     </div>
-    <div class="mb-4">
-      <p class="mb-2">Amplitude: <span id="amplitudeValue">0.5</span></p>
-      <input id="amplitudeSlider" type="range" min="0" max="1" step="0.01" value="0.5" class="w-full accent-indigo-500" />
+    <div>
+      <p>Amplitude: <span id="amplitudeValue">0.5</span></p>
+      <input id="amplitudeSlider" class="slider" type="range" min="0" max="1" step="0.01" value="0.5">
     </div>
-    <div class="flex gap-4 mb-6">
-      <button id="playButton" class="bg-orange-400 text-black font-semibold px-4 py-2 rounded hover:bg-orange-500">Play</button>
-      <button id="stopButton" class="bg-orange-400 text-black font-semibold px-4 py-2 rounded hover:bg-orange-500" disabled>Stop</button>
+    <div>
+      <button id="playButton" class="button">Play</button>
+      <button id="stopButton" class="button" disabled>Stop</button>
     </div>
-    <canvas id="oscilloscope" width="400" height="150" class="border-2 border-green-400 rounded"></canvas>
+    <canvas id="oscilloscope" width="400" height="150"></canvas>
   </div>
   <script>
     let audioCtx, oscillator, gainNode, analyser, playing = false;
